<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:layout_editor_absoluteY="25dp">

    <data>
        <variable
            name="confidence"
            type="String" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!--Fish Species Image-->
            <ImageButton
                android:id="@+id/btnBack"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:background="?attr/actionModeCloseDrawable"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="SpeakableTextPresentCheck" />

            <ImageView
                android:id="@+id/imgFishSpecies"
                android:layout_width="381dp"
                android:layout_height="220dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="72dp"
                android:contentDescription="TODO"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:srcCompat="@tools:sample/backgrounds/scenic" />

            <ImageView
                android:id="@+id/imgInputFish"
                android:layout_width="150dp"
                android:layout_height="90dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="180dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:srcCompat="@tools:sample/backgrounds/scenic" />

             <TextView
                android:id="@+id/lblConfidence"
                android:layout_width="120dp"
                android:layout_height="43dp"
                android:layout_marginTop="236dp"
                android:layout_marginEnd="16dp"
                android:background="#61000000"
                android:text="@{confidence}"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="32sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="@tools:sample/us_zipcodes" />

            <Button
                android:id="@+id/btnResultTwo"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/circular_button"
                android:text="@string/btnResulTwo"
                android:textSize="20sp"
                app:layout_constraintEnd_toStartOf="@+id/btnResultThree"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/btnResultOne"
                app:layout_constraintTop_toBottomOf="@+id/imgFishSpecies" />

            <Button
                android:id="@+id/btnResultOne"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/circular_button"
                android:clickable="true"
                android:enabled="true"
                android:focusable="true"
                android:text="@string/btnResultOne"
                android:textSize="20sp"
                app:layout_constraintEnd_toStartOf="@+id/btnResultTwo"
                app:layout_constraintHorizontal_bias="0.91"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imgFishSpecies" />

            <Button
                android:id="@+id/btnResultThree"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="2"
                android:background="@drawable/circular_button"
                android:text="@string/btnResultThree"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/btnResultTwo"
                app:layout_constraintTop_toBottomOf="@+id/imgFishSpecies" />

        </androidx.constraintlayout.widget.ConstraintLayout>

       <!--Fish Information-->
        <include
            layout="@layout/description_layout"
            android:id="@+id/scrlInfo" />

    </LinearLayout>
</layout>